fixing button on mobile

--- a/organizerClient/src/app/tags/tags.component.scss
+++ b/organizerClient/src/app/tags/tags.component.scss
@@ -78,8 +78,8 @@ table {
 }
 
 .mat-column-info {
-  width: 5px;
-  max-width: 5px;
+  width: 20px;
+  max-width: 20px;
 }
 
 .mat-chip-list-wrapper {
